apps/clusterapi/providers/talos-bootstrap/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cluster.x-k8s.io/provider: bootstrap-talos
    clusterctl.cluster.x-k8s.io: ""
  name: cabpt-system
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cluster.x-k8s.io/provider: bootstrap-talos
    clusterctl.cluster.x-k8s.io: ""
    control-plane: controller-manager
  name: cabpt-controller-manager-metrics-service
  namespace: cabpt-system
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    cluster.x-k8s.io/provider: bootstrap-talos
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cluster.x-k8s.io/provider: bootstrap-talos
    clusterctl.cluster.x-k8s.io: ""
  name: cabpt-webhook-service
  namespace: cabpt-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    cluster.x-k8s.io/provider: bootstrap-talos
    control-plane: controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: bootstrap-talos
    clusterctl.cluster.x-k8s.io: ""
    control-plane: controller-manager
  name: cabpt-controller-manager
  namespace: cabpt-system
spec:
  replicas: 1
  selector:
    matchLabels:
      cluster.x-k8s.io/provider: bootstrap-talos
      control-plane: controller-manager
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        cluster.x-k8s.io/provider: bootstrap-talos
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --metrics-bind-addr=127.0.0.1:8080
        - --enable-leader-election
        - --feature-gates=MachinePool=false
        command:
        - /manager
        image: ghcr.io/siderolabs/cluster-api-talos-controller:v0.6.2
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthz
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 9440
          name: healthz
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthz
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: cabpt-webhook-service-cert
status: {}
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: cabpt-system/cabpt-serving-cert
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: bootstrap-talos
    clusterctl.cluster.x-k8s.io: ""
  name: cabpt-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cabpt-webhook-service
      namespace: cabpt-system
      path: /validate-bootstrap-cluster-x-k8s-io-v1alpha3-talosconfig
  failurePolicy: Fail
  name: vtalosconfig.cluster.x-k8s.io
  rules:
  - apiGroups:
    - bootstrap.cluster.x-k8s.io
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    resources:
    - talosconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cabpt-webhook-service
      namespace: cabpt-system
      path: /validate-bootstrap-cluster-x-k8s-io-v1alpha3-talosconfigtemplate
  failurePolicy: Fail
  name: vtalosconfigtemplate.cluster.x-k8s.io
  rules:
  - apiGroups:
    - bootstrap.cluster.x-k8s.io
    apiVersions:
    - v1alpha3
    operations:
    - UPDATE
    resources:
    - talosconfigtemplates
  sideEffects: None
